--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
     "firebase": "^11.0.2",
+    "font-awesome": "^4.7.0",
+    "i18next": "^24.0.5",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^4.0.0",
@@ -23,11 +25,13 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-i18next": "^15.1.3",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "rollup": "^4.28.0",
     "sort-by": "^0.0.2",
-    "sweetalert2": "^11.6.13"
+    "sweetalert2": "^11.6.13",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
